--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <!-- meta для соцсетей -->
     <meta property="og:url" content="">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Артем Исламов - верстка сайтов на HTML и CSS">
+    <meta property="og:title" content="Александр Стрелков - верстка сайтов на HTML и CSS">
     <meta property="og:image" content="">
     <meta property="og:description" content="Закажите разработку сайта без посредников от 5 990 рублей">
     <meta property="og:site_name" content="Портфолио верстальщика">
-    <meta property="article:author" content="Артем Исламов">
+    <meta property="article:author" content="Александр Стрелков">
     <!-- Заголовок сайта -->
     <title>Артем Исламов - Портфолио</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
@@ -32,7 +32,7 @@
 			<div class="main-overlay"></div>
 				<div class="wrapper">
 					<div class="main-header">
-						<h1>Артем Исламов </h1>
+						<h1>Александр Стрелков </h1>
 						<div class="main-line"></div>
 						<p>Верстка на HTML и CSS <br>Разработка сайтов под ключ</p>
 					</div>
@@ -70,20 +70,20 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-3">
-							<strong>Артем Исламов</strong>
+							<strong>Александр Стрелков</strong>
 							<p>Разработка сайтов <br>под ключ</p>
 						</div>
 						<div class="col-md-6">
 							<strong>Подпишитесь</strong>
 							<div class="social-links">
-								<a href="#"><i class="icon-vk"></i></a>
-								<a href="#"><i class="icon-instagram"></i></a>
+								<a href="https://vk.com/sashkakrutyashka"><i class="icon-vk"></i></a>
+								<a href="https://www.instagram.com/sashka_krutyashka/"><i class="icon-instagram"></i></a>
 								<a href="#"><i class="icon-twitter"></i></a>
 							</div>
 						</div>
 						<div class="col-md-3">
 							<strong>Напишите мне</strong>
-							<a href="https://vk.me/aislam23" class="offer-btn">Заказать сайт</a>
+							<a href="https://vk.me/sashkakrutyashka" class="offer-btn">Заказать сайт</a>
 						</div>
 					</div>
 				</div>
