--- a/index.html
+++ b/index.html
@@ -117,5 +117,15 @@
     		});
     	});
     </script>
+	  <script>
+		  $(document).ready(function() {
+			  $(".slowly").on("click", function (event) {
+				  event.preventDefault();
+				  var id = $(this).attr('href'),
+				  	top = $(id).offset().top;
+				  $('body,html').animate({scrollTop: top}, 800);
+			  });
+		  });
+	  </script>
   </body>
 </html>
