--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<p>Верстка на HTML и CSS <br>Разработка сайтов под ключ</p>
 					</div>
 				</div>
-				<a class="main-down" href="#portfolio"><i class="icon-down"></i></a>
+				<a class="main-down slowly" href="#portfolio"><i class="icon-down"></i></a>
 			</div> 
 
 			<div class="portfolio" id="portfolio">
